# motion

./: .gitignore  .travis.yml  CHANGELOG  Makefile.am  Makefile.in  README.md  conf.c  conf.h  config.h.in  configure  configure.ac  configure.in  database.c  database.h  event.c  event.h  ffmpeg.c  jpegutils.c  logger.c  logger.h  motion-dist.conf.in  motion.c  motion.h  motion_redis.c  motion_redis.h  netcam_ftp.c  picture.c  video_common.c  webhttpd.c
debian/: .gitignore  changelog  control  dirs  motion.conf  motion.postinst  motion.upstart  rules
man/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  conf.c  conf.h  logger.c  logger.h  motion.c  netcam_ftp.c  netcam_rtsp.c  rotate.c  video2.c
tests/: Makefile.am  motion_test.c
